@@ -112,7 +112,7 @@ public:
 enum eAllocStrategy
 {
 	ALLOC_STRATEGY_SAFE    = 0,	// increase size by 1
-	ALLOC_STRATEGY_DOUBLE  = 1,	// increase at least 6, double size when under 500 elements, otherwise increase by 1/4th of number elements
+	ALLOC_STRATEGY_DOUBLE  = 1,	// double size when under 500 elements, beyond that increase by 1/4th size. Plus a small constant.
 	ALLOC_STRATEGY_SQRT    = 2	// not implemented
 };
 
